tests/baselines/reference/project/nestedLocalModuleWithRecursiveTypecheck/amd/nestedLocalModuleWithRecursiveTypecheck.errors.txt
test1.ts(3,23): error TS1147: Import declarations in an internal module cannot reference an external module.
test1.ts(3,23): error TS2307: Cannot find external module 'test2'.


==== test1.ts (2 errors) ====
    module myModule {
     
     import foo = require("test2");
                          ~~~~~~~
!!! error TS1147: Import declarations in an internal module cannot reference an external module.
                          ~~~~~~~
!!! error TS2307: Cannot find external module 'test2'.
    
     //console.log(foo.$);
    
     var z = foo.Yo.y();
    
    }
    
    export var x = 0;
    